/*
 * Copyright (C) 2019 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package android.os.statsd;
option java_package = "com.android.os";
option java_multiple_files = true;
option java_outer_classname = "ActiveConfigProto";

message ActiveMetric {
    // metric id
    optional int64 metric_id = 1;
    // Remaining time to live in nano seconds. -1 for infinity.
    optional int64 time_to_live_nanos = 2;
}

message ActiveConfig {
    // config id
    optional int64 config_id = 1;
    // config uid
    optional int32 uid = 2;
    // metrics
    repeated ActiveMetric active_metric = 3;
}

// all configs and their metrics on device.
message ActiveConfigList {
    repeated ActiveConfig active_config = 1;
}